<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <com.example.targetfirstapp.widget.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/header"
        app:border_color2="@color/colorPrimary"
        app:border_width="2dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/shubham_tyagi"
        android:textColor="@color/font_deep_gray"
        android:textSize="16sp"/>

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:autoLink="web"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/github_https_github_com_subhamtyagi"
        android:textColorLink="@color/colorPrimary"/>


    <View
        android:layout_width="240dp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/upstream_developer"
        android:textColor="@color/font_deep_gray"
        android:textSize="16sp"/>

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/up_stream_deve_name_espoir"
        android:textColor="@color/font_deep_gray"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:autoLink="web"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/github_https_github_com_espoir_x"
        android:textColorLink="@color/colorPrimary"/>


</LinearLayout>