<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFEFF0">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:src="@drawable/ic_fullscreen_exit_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/btn_back"
            android:layout_toRightOf="@+id/btn_back"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="#2c2c2c"
            android:textSize="14sp"/>
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CACACA"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#2c2c2c"
            android:textSize="14sp"/>

        <CheckBox
            android:id="@+id/checkbox_app_lock_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"/>
    </RelativeLayout>
    <!--

        <RelativeLayout
            android:id="@+id/lock_type"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_white_clicked"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/lock_type"
                android:textColor="#2c2c2c"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/lock_type_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/arrow_more"
                android:drawablePadding="15dp"
                tool:text="Usage stats"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#DEDEDE"
                android:textColor="#2c2c2c"/>
        </RelativeLayout>

    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lock_immediately_after_locking_the_screen"
            android:textColor="#2c2c2c"
            android:textSize="14sp"/>

        <CheckBox
            android:id="@+id/checkbox_lock_screen_switch_on_phone_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/intruder_selfie"
            android:textColor="#2c2c2c"
            android:textSize="14sp"/>

        <CheckBox
            android:id="@+id/checkbox_intruder_selfie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/hide_pattern"
            android:textColor="#2c2c2c"
            android:textSize="14sp"/>

        <CheckBox
            android:id="@+id/checkbox_show_hide_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/vibrate"
            android:textColor="#2c2c2c"
            android:textSize="14sp"/>

        <CheckBox
            android:id="@+id/checkbox_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:button="@drawable/bg_checkbox_lock"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"/>
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/lock_when"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lock_settings"
            android:textColor="#2c2c2c"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/lock_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/arrow_more"
            android:drawablePadding="15dp"
            tool:text="After locking the screen"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DEDEDE"
            android:textColor="#2c2c2c"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/btn_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:drawableRight="@drawable/arrow_more"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/change_the_password"
        android:textColor="#2c2c2c"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#DEDEDE"/>

    <TextView
        android:id="@+id/about_me"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:drawableRight="@drawable/arrow_more"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/about_me"
        android:textColor="#2c2c2c"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/line_color"/>
</LinearLayout>